# life-on-actions

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tick.yml
scripts/: seed_readme.py
src/life_on_actions/: __init__.py  board.py  rules.py  tick.py
tests/: test_board.py  test_rules.py
