[project]
name = "life-on-actions"
version = "0.1.0"
description = "Conway's Game of Life running on GitHub Actions cron"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tick = "life_on_actions.tick:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/life_on_actions"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
